# lauf

./: CMakeLists.txt  README.adoc  example.cpp  main.cpp
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  chunk.cpp  fib.cpp  main.cpp  trivial.cpp
include/lauf/: builder.h  builtin.h  config.h  error.h  function.h  jit.h  lib.h  linker.h  module.h  program.h  reader.h  type.h  value.h  vm.h  writer.h
include/lauf/asm/: builder.h  module.h  program.h  type.h
include/lauf/backend/: dump.h  qbe.h  writer.h
include/lauf/frontend/: text.h
include/lauf/lib/: bits.h  debug.h  fiber.h  heap.h  int.h  limits.h  memory.h  platform.h  test.h
include/lauf/runtime/: builtin.h  memory.h  process.h  stacktrace.h  value.h
src/: CMakeLists.txt  builder.cpp  error.cpp  function.cpp  jit_aarch64.cpp  jit_aarch64.s  jit_null.cpp  lauf.c  linker.cpp  module.cpp  program.cpp  type.cpp  vm.cpp
src/detail/: bc_ops.h  bytecode.hpp  constant_pool.hpp  function.hpp  stack_check.hpp
src/frontend/: text.cpp
src/impl/: module.hpp
src/lauf/: bc_ops.h  bytecode.hpp  bytecode_builder.hpp  config.cpp  lib.cpp  literal_pool.hpp  reader.cpp  reader.hpp  stack_check.hpp  verify.hpp  vm.cpp  vm.hpp  vm_execute.cpp  vm_execute.hpp  vm_memory.hpp  writer.cpp  writer.hpp
src/lauf/aarch64/: assembler.hpp  emitter.hpp  jit.hpp  register.hpp  register_allocator.hpp
src/lauf/asm/: builder.cpp  builder.hpp  instruction.def.hpp  instruction.hpp  module.cpp  module.hpp  program.cpp  program.hpp  type.cpp
src/lauf/backend/: dump.cpp  qbe.cpp  qbe.hpp
src/lauf/bc/: bc_ops.h  bytecode.hpp  bytecode_builder.hpp  literal_pool.hpp  stack_check.hpp  verify.hpp  vm_memory.hpp
src/lauf/detail/: bc_ops.h  bytecode.hpp  bytecode_builder.hpp  constant_pool.hpp  literal_pool.hpp  stack_allocator.hpp  stack_check.hpp  temporary_array.hpp  verify.hpp
src/lauf/frontend/: text.cpp
src/lauf/impl/: builtin.hpp  module.hpp  process.hpp  program.hpp  vm.hpp
src/lauf/ir/: builtin.hpp  cfg.cpp  cfg.hpp  instruction.hpp  ir_ops.h  irdump.cpp  irdump.hpp  irgen.cpp  irgen.hpp  register_allocator.cpp  register_allocator.hpp
src/lauf/lib/: bits.cpp  debug.cpp  debug.hpp  fiber.cpp  heap.cpp  int.cpp  limits.cpp  memory.cpp  platform.cpp  test.cpp
src/lauf/runtime/: memory.cpp  memory.hpp  process.cpp  process.hpp  stack.hpp  stacktrace.cpp  value.cpp
src/lauf/support/: align.hpp  arena.hpp  array.hpp  array_list.hpp  joined_allocation.hpp  page_allocator.cpp  page_allocator.hpp  stack_allocator.hpp  temporary_array.hpp  verify.hpp  virtual_memory.cpp  virtual_memory.hpp
src/lauf/vm/: jit.cpp  jit.hpp
src/lib/: int.cpp  int_aarch64.cpp  memory.cpp
tests/: CMakeLists.txt  all.c  doctest_main.cpp
tests/integration/: CMakeLists.txt  array_aggregate.lauf  basic.lauf  bits.lauf  branch.lauf  call.lauf  call_indirect.lauf  control_flow.lauf  empty.lauf  fib.lauf  fiber.lauf  heap.lauf  int.lauf  layout.lauf  limits.lauf  load_store.lauf  local.lauf  memory.lauf  panic.lauf  run_qbe.sh  runner.cpp  runtime.c  tail_call.lauf  tail_call_indirect.lauf  vstack.lauf
tests/lauf/: CMakeLists.txt  reader.cpp  vm.cpp  writer.cpp
tests/lauf/asm/: builder.cpp
tests/lauf/support/: arena.cpp  array.cpp  array_list.cpp
tools/: CMakeLists.txt  defer.hpp  interpreter.cpp  qbe.cpp
